# slam_utility

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/slam_utility/: common.h
include/slam_utility/camera/: undistorter.h
include/slam_utility/data_provider/: README.md  data_provider_EuRoC.h  data_provider_base.h
include/slam_utility/degeneracy_estimation/: solution.h  types.h
include/slam_utility/stats/: stats.h  summary.h  timer.h
params/EuRoC/: left_camera.yaml  right_camera.yaml
scripts/loop_closure/: README.md  parsing.py
src/camera/: undistorter.cpp
src/data_provider/: data_provider_EuRoC.cpp
src/degeneracy_estimation/: solution.cpp
test/: CMakeLists.txt  test_camera_undistorter.cpp  test_data_provider_EuRoC.cpp  test_orb_stereo_matching_latency.cpp  test_stats.cpp
